# vulis

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  REUSE.toml  SECURITY.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changeset-check.yml  ci.yml  docs.yml
ADR/: 0000-template.md  0001-license.md  0002-monorepo.md  0003-stack-python-first.md  0004-mqtt-sparkplug.md  0005-topology-3-surfaces.md  0006-storage-abstraction.md  0007-air-gap-relay.md  0008-edge-fleet.md  0009-code-management.md  0010-air-gap-git-mirror.md  README.md
LICENSES/: AGPL-3.0-only.txt  LicenseRef-Vulis-BSL-1.1.txt
docker/compose/: .env.example  docker-compose.dev.yml  docker-compose.platform.yml  init-platform.ps1  init-platform.sh
docker/compose/keycloak/realms/: .gitkeep  README.md  vulis-realm-dev.json
docker/compose/mosquitto/: entrypoint.sh  mosquitto-platform.conf  mosquitto.conf
docs/: architecture.md  contributing.md  governance.md  index.md  licensing.md  security.md
docs/adr/: index.md
docs/getting-started/: concepts.md  quick-start.md
docs/handoff/: 01-context.md  02-state.md  03-conventions.md  04-roadmap.md  05-pitfalls.md  README.md
libs/core-py/: README.md  pyproject.toml
libs/core-py/src/vulis_core/: __init__.py  config.py  exceptions.py  logging.py  types.py
libs/core-py/tests/: test_exceptions.py  test_logging_config.py  test_types.py
libs/obs-py/: README.md  pyproject.toml
libs/obs-py/src/vulis_obs/: __init__.py  metrics.py  setup.py  tracing.py
libs/obs-py/tests/: test_setup.py
libs/proto/: README.md  buf.gen.yaml  buf.yaml  pyproject.toml
libs/proto/proto/vulis/common/v1/: common.proto
libs/proto/proto/vulis/dataset/v1/: dataset.proto
libs/proto/proto/vulis/model/v1/: model.proto
libs/proto/proto/vulis/project/v1/: project.proto
libs/proto/src/vulis_proto/: __init__.py
libs/schemas/: README.md  alembic.ini  pyproject.toml
libs/schemas/alembic/: env.py  script.py.mako
libs/schemas/alembic/versions/: 0001_initial.py  0002_projects.py  0003_datasets.py  0004_models.py
libs/schemas/src/vulis_schemas/: __init__.py  base.py
libs/schemas/tests/: test_base.py
libs/storage/: README.md  pyproject.toml
libs/storage/src/vulis_storage/: __init__.py  base.py  factory.py
libs/storage/src/vulis_storage/backends/: __init__.py  local_fs.py  s3.py  smb_mount.py  smb_protocol.py
libs/storage/tests/: conftest.py  test_base.py  test_contract.py  test_factory.py  test_local_fs_specific.py  test_smb_protocol_live.py
services/dataset/: README.md  pyproject.toml
services/dataset/src/vulis_dataset/: __init__.py  app.py  audit.py  config.py  dependencies.py  importers.py  main.py  manifest.py  models.py  schemas.py
services/dataset/src/vulis_dataset/routes/: __init__.py  datasets.py  imports.py  samples.py  versions.py
services/dataset/tests/: conftest.py  test_audit.py  test_manifest.py  test_models.py  test_routes_datasets.py  test_routes_imports.py  test_routes_versions.py
services/project-api/: README.md  pyproject.toml
services/project-api/src/vulis_project/: __init__.py  app.py  audit.py  config.py  dependencies.py  main.py  models.py  schemas.py  state_machine.py
services/project-api/src/vulis_project/routes/: __init__.py  campaigns.py  lines.py  projects.py  tasks.py
services/project-api/tests/: conftest.py  test_audit.py  test_models.py  test_routes_lines_campaigns.py  test_routes_projects.py  test_routes_tasks.py  test_state_machine.py
services/registry/: README.md  pyproject.toml
services/registry/src/vulis_registry/: __init__.py  app.py  audit.py  config.py  dependencies.py  main.py  model_card.py  models.py  onnx_validate.py  schemas.py  state_machine.py
services/registry/src/vulis_registry/routes/: __init__.py  models.py  versions.py
services/registry/tests/: conftest.py  test_audit.py  test_models.py  test_onnx_validate.py  test_routes_models.py  test_routes_versions.py  test_state_machine.py
