[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vulis-core-py"
version = "0.1.0"
description = "Vulis shared core: exceptions, types, configuration, structured logging."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Vulis-BSL-1.1"
license-files = ["../../LICENSE", "../../LICENSES/*.txt"]
authors = [{ name = "Vulis Project Contributors" }]
keywords = ["vulis", "industrial-vision", "mlops", "core"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typing_extensions>=4.10; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vulis/vulis"
Repository = "https://github.com/vulis/vulis"
Documentation = "https://vulis.github.io/vulis/"

[tool.hatch.build.targets.wheel]
packages = ["src/vulis_core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B017 (pytest.raises(Exception)) is sometimes intentional in tests where we
# assert that *some* exception is raised without coupling to a specific type.
per-file-ignores = { "tests/**" = ["B017"] }

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
