[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vulis-proto"
version = "0.1.0"
description = "Vulis gRPC/Protobuf schemas and generated Python stubs."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Vulis-BSL-1.1"
license-files = ["../../LICENSE", "../../LICENSES/*.txt"]
authors = [{ name = "Vulis Project Contributors" }]
keywords = ["vulis", "grpc", "protobuf", "schemas"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio>=1.62",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/vulis/vulis"
Repository = "https://github.com/vulis/vulis"
Documentation = "https://vulis.github.io/vulis/"

[tool.hatch.build.targets.wheel]
packages = ["src/vulis_proto"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# Ignore generated code.
extend-exclude = ["src/vulis_proto/gen"]

[tool.mypy]
python_version = "3.11"
ignore_errors = true  # generated code is not type-checked
