[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vulis-storage"
version = "0.1.0"
description = "Vulis storage backend abstraction (SMB protocol default, local FS, S3-ready)."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Vulis-BSL-1.1"
license-files = ["../../LICENSE", "../../LICENSES/*.txt"]
authors = [{ name = "Vulis Project Contributors" }]
keywords = ["vulis", "storage", "smb", "object-store"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "vulis-core-py>=0.1.0",
    "smbprotocol>=1.15",
    "pydantic>=2.6",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "vulis-core-py[test]",
]

[project.urls]
Homepage = "https://github.com/vulis/vulis"
Repository = "https://github.com/vulis/vulis"
Documentation = "https://vulis.github.io/vulis/"

[tool.hatch.build.targets.wheel]
packages = ["src/vulis_storage"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
per-file-ignores = { "tests/**" = ["B017"] }

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "smb: tests requiring a live SMB share (skipped without --smb-host)",
]
